# routes/index.js
@@ -6,9 +6,11 @@ router.use('/api-docs', swaggerUi.serve);
 router.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
 router.get('/', (req, res) => {
-    res.send('Hello World')
+    res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : 'Logged out')
 })
 
 router.use('/library', require('./library'));
+router.use('/playlist', require('./playlist'));
+router.use('/auth', require('./auth'));
 
 module.exports = router;
